# dead_link_detective

./: .gitignore  README.md  pyproject.toml
detective/: __main__.py
tests/: test_main.py
