[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dead-link-detective"
dynamic = ["version"]
description = "A simple asynchronous dead link detector for any website."
readme = "README.md"
authors = [{ name = "Ahmed Bin Nasser", email = "munnaa329@gmail.com" }]

[project.scripts]
dead-link-detective = "detective.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "detective.__version__" }
